# RISCV-CPU

./: .gitignore  .gitmodules  ALU.v  CMakeLists.txt  CONSTANT.v  DECODER.v  HAZARD.v  MEM.v  README.md  RGF.v  RV32.v  RegPC.v  RegPipe.v  main.cpp  rv32.v
SingleCycle/: adder.v  aludec.v  flopr.v  main.cpp  mux2.v  regfile.v  top.v
dev_experiments/SingleCycle/: README.md  controller.v  datapath.v  dmem.v  imem.v  maindec.v  mips.v  signext.v  sl2.v
dev_experiments/pipeline/: CMakeLists.txt  main.cpp  pipeline.v
examples/: hello.c
pipeline/: README.md
